Handle if journalposter is null
